CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(CPP-LRU_CACHE)

SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

INCLUDE_DIRECTORIES(
	${PROJECT_SOURCE_DIR}/include)

LINK_DIRECTORIES()

ADD_EXECUTABLE(cpp-lru-cache-test
	src/test)

TARGET_LINK_LIBRARIES(cpp-lru-cache-test)

SET_TARGET_PROPERTIES(cpp-lru-cache-test PROPERTIES
	PREFIX ""
	SUFFIX ""
	COMPILE_FLAGS "-std=c++0x -W -Wall -pedantic")

set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g3")
set(CMAKE_CSS_FLAGS_RELEASE "-03 -g")


