AC_INIT([cpp-lru-cache],[0.1], [https://github.com/lamerman/cpp-lru-cache/issues], [],[https://github.com/lamerman/cpp-lru-cache])
AM_INIT_AUTOMAKE([foreign subdir-objects])                                                                                                                                    
AM_SILENT_RULES([yes])                                                                                                                                                        
LT_INIT([dlopen])                                                                                                                                                             
                                                                                                                                                                              
AC_CONFIG_HEADERS([config.h])                                                                                                                                                 
AC_CONFIG_FILES([Makefile ])                                                                                                                                                  
                                                                                                                                                                              
AC_PROG_CXX                                                                                                                                                                   
AC_LANG([C++])                                                                                                                                                                

AC_OUTPUT
